classDiagram
    direction BT

    class RacingSeries {
        -Long id
        -String name
        -String officialName
        -String headquarters
        -String governingBody
        -Integer foundedYear
        -Integer rounds
        -List~RacingTeam~ teams
    }

    class RacingTeam {
        <<abstract>>
        -Long id
        -String name
        -String principalName
        -String baseLocation
        -Integer points
        -RacingSeries series
        -List~RacingDriver~ drivers
        -String teamColor
        -Integer wins
        -Integer podiums
        +calculatePoints(position) int*
    }

    class F1Team {
        -String powerUnit
        -Double budgetCap
        -Integer constructorPos
        +calculatePoints(position) int
    }

    class F2Team {
        -String chassisModel
        -Integer graduates
        -Boolean isFeeder
        +calculatePoints(position) int
    }

    class FormulaETeam {
        -String energyPartner
        -Double batteryKwh
        -Integer sustainScore
        +calculatePoints(position) int
    }

    class RacingDriver {
        -Long id
        -RacingTeam team
        -String firstName
        -String lastName
        -Integer racingNumber
        -Integer points
    }

    RacingSeries "1" *-- "many" RacingTeam : Contains
    RacingTeam "1" *-- "many" RacingDriver : Employs
    F1Team --|> RacingTeam : Inherits
    F2Team --|> RacingTeam : Inherits
    FormulaETeam --|> RacingTeam : Inherits
